--- a/Assets/Resources/UITk/UI/MainMenu.uxml
+++ b/Assets/Resources/UITk/UI/MainMenu.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xmlns:lsp="Unity.Samples.LetterSpell" xmlns:sr="Unity.Samples.ScreenReader" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Assets/Resources/UITk/UI/%20MainMenu.uss?fileID=7433441132597879392&amp;guid=4538736f0e9494db1a7b76ee9349bde4&amp;type=3# MainMenu"/>
+    <Style src="project://database/Assets/Resources/UITk/UI/MainMenu.uss?fileID=7433441132597879392&amp;guid=4538736f0e9494db1a7b76ee9349bde4&amp;type=3#MainMenu"/>
     <ui:VisualElement name="root" style="flex-grow: 1;">
         <ui:VisualElement name="logo" class="lsp-logo"/>
         <ui:VisualElement style="flex-grow: 1; justify-content: center; align-items: center;">
