Renamed StyleSheeets and deleted old ones

--- a/Assets/Resources/UITk/Themes/LetterSpellStyle.Common.Vars.uss
+++ b/Assets/Resources/UITk/Themes/LetterSpellStyle.Common.Vars.uss
@@ -1,4 +1,4 @@
-@import url("Tokens/LetterSpellStyle.Token.Common.uss");
+@import url("Tokens/LetterSpellStyle.Tokens.Common.uss");
 
 :root {
     font-size: var(--lsp-font-size-md);
