--- a/Assets/Resources/UITk/Themes/LetterSpellTheme.uss
+++ b/Assets/Resources/UITk/Themes/LetterSpellTheme.uss
@@ -217,6 +217,11 @@
     padding-left: 70px;
 }
 
+.unity-label,
+.unity-base-field__label {
+    -unity-text-align: var(--lsp-middle-left);
+}
+
 .unity-base-field__label {
     min-width: 680px;
 }
@@ -230,7 +235,6 @@
 }
 
 .unity-base-field__label {
-    -unity-text-align: middle-left;
     margin-right: 30px;
 }
 
@@ -272,6 +276,9 @@
     background-color: rgb(161, 116, 244);
 }
 
+.unity-toggle__input {
+    flex-direction: var(--lsp-row);
+}
 .unity-toggle__checkmark {
     background-color: rgba(0, 0, 0, 0);
     border-left-color: rgb(0, 0, 0);
@@ -290,6 +297,7 @@
     width: 50px;
     height: 50px;
     margin-right: 30px;
+    margin-left: 30px;
 }
 
 .unity-base-slider__tracker {
@@ -340,6 +348,11 @@
     border-bottom-left-radius: 30px;
     padding-top: 30px;
     padding-bottom: 30px;
+    flex-direction: var(--lsp-row);
+}
+
+.unity-base-popup-field__text {
+    -unity-text-align: var(--lsp-middle-left);
 }
 
 .unity-base-text-field__input--placeholder {
@@ -433,8 +446,12 @@
     margin-bottom: 30px;
 }
 
+.unity-base-field {
+    flex-direction: var(--lsp-row);
+}
+
 .lsp-button-strip-field__button-container {
-    flex-direction: row;
+    flex-direction: var(--lsp-row);
 }
 
 .lsp-button-strip-field__button {
@@ -450,18 +467,32 @@
     background-color: rgb(116, 45, 243);
 }
 
-.lsp-button-strip-field__button--left {
+.lsp-dir-ltr .lsp-button-strip-field__button--left {
     margin-right: 0;
     border-right-width: 5px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
 
-.lsp-button-strip-field__button--right {
+.lsp-dir-rtl .lsp-button-strip-field__button--left{
+    margin-left: 0;
+    border-left-width: 5px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.lsp-dir-ltr .lsp-button-strip-field__button--right {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     border-left-width: 5px;
     margin-left: 0;
+}
+
+.lsp-dir-rtl .lsp-button-strip-field__button--right {
+    margin-right: 0;
+    border-right-width: 5px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .lsp-button-strip-field__button:checked {
@@ -475,7 +506,7 @@
 }
 
 .unity-radio-button {
-    flex-direction: row-reverse;
+    flex-direction: var(--lsp-row-reverse);
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -488,13 +519,14 @@
     width: 50px;
     height: 50px;
     margin-right: 30px;
+    margin-left: 30px;
     background-image: url("project://database/Assets/UI/Images/Dropdown-Arrow.png?fileID=2800000&guid=29e091d0e13ce4d928a786bc1ff99351&type=3#Dropdown-Arrow");
     margin-top: 14px;
     margin-bottom: 14px;
 }
 
 .row {
-    flex-direction: row;
+    flex-direction: var(--lsp-row);
 }
 
 #closeSettingsButton {
