Fixed the check for word completed in Arabic. Fixed the correct work.
Fixed the music settings not affected the actual sound

--- a/Assets/Resources/UITk/MainView.uxml
+++ b/Assets/Resources/UITk/MainView.uxml
@@ -57,7 +57,11 @@
                         <ui:Label text="#clue" name="clueLabel" class="title-text" style="-unity-text-align: middle-center;"/>
                         <ui:VisualElement name="successPill">
                             <ui:VisualElement name="successPillCheckmark"/>
-                            <ui:Label text="Correct" class="success-pill__label"/>
+                            <ui:Label class="success-pill__label">
+                                <Bindings>
+                                    <UnityEngine.Localization.LocalizedString property="text" table="GUID:cc1d194facb1d9d4380a9ea2032c10ca" entry="Id(3064538126606336)"/>
+                                </Bindings>
+                            </ui:Label>
                         </ui:VisualElement>
                     </ui:VisualElement>
                     <Unity.Samples.LetterSpell.CardListView name="letterCardContainer" style="flex-grow: 1;"/>
